# compactifAI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: gpt_oss_20b_mpo.yaml
scripts/: download_elitr.py  download_qmsum.py
src/quantum_tensors/: __init__.py  __main__.py  cli.py  metrics.py  mpo.py  utils.py
src/quantum_tensors/benchmarks/: __init__.py  data.py  elitr.py  generation.py  judge.py  qmsum.py
src/quantum_tensors/modeling/: __init__.py  checkpoint.py  tensorize.py
src/quantum_tensors/training/: __init__.py  heal.py
tests/: test_checkpoint_roundtrip.py  test_data_loaders.py  test_heal_labels.py  test_metrics.py  test_mpo.py
